# fractal

./: .gitignore  LICENSE  README.md  log_1000_iter.csv  log_1000_iter.xlsx  log_50000_iter.csv  log_50000_iter.xlsx  m2_air_1280x720_10_000.csv  make_videos.sh  ryzen9_log_4k_50000_iter.csv  ryzen9_log_50000_iter.csv  stats.sh  stats_opt.sh
backend/: Cargo.toml
backend/src/: color.rs  complex.rs  fractal.rs  fractal_image.rs  image_tile.rs  main.rs  models.rs  rayon_image.rs  server.rs  utils.rs
common/: Cargo.toml
common/src/: color.rs  complex.rs  fractal_image.rs  image_tile.rs  models.rs
frontend/: Cargo.toml
frontend/src/: main.rs
java/: pom.xml  readme.md
java/src/main/java/at/bumzack/fractalthingi/: Color.java  ComplexNumber.java  FileColor.java  Fractal.java  FractalComputer.java  FractalComputer2.java  FractalComputer3.java  FractalComputer4.java  FractalComputer5.java  FractalComputer6.java  FractalController.java  FractalImage.java  FractalRequest.java  FractalResponse.java  FractalThingiApplication.java  FractalVirtualThreads.java  GlobalInt.java  Hsl.java  MultiThreadedCalculation.java  WebConfiguration.java
java/src/test/java/at/bumzack/fractalthingi/: FractalThingiApplicationTests.java
rust/: Cargo.toml  make_mp4.sh  readme.md
rust/backend/: Cargo.toml
rust/backend/examples/: calc_with_zoom.rs  read_palette.rs
rust/backend/src/: fractal.rs  index_html.rs  main.rs  server.rs  utils.rs
rust/brownbag/: Cargo.toml  created_by_ai_using_mpsc.ppm  multi_threaded_200x160_max_iter_1000.ppm  multi_threaded_320x240_max_iter_1000.ppm
rust/brownbag/examples/: ex02_variables.rs  ex03_mutable_variables.rs  ex04_structs.rs  ex05_derive_debug.rs  ex06_impl_trait.rs  ex07_vec.rs  ex08_lambda.rs  ex20_references.rs  ex21_references.rs  ex22_enums.rs  ex30_thread.rs  ex31_threads.rs  ex32_threads.rs  ex33_threads.rs  ex34_threads.rs
rust/brownbag/src/: complex.rs  created_by_ai_assistant_mpsc.rs  created_by_ai_assistant_rayon.rs  created_by_ai_assistant_threads.rs  created_by_ai_assistant_threads_work_stealing.rs  created_by_ai_assistant_threads_work_stealing_rayon.rs  fractal.rs  main.rs  multithreaded.rs  multithreaded_mpsc.rs  palette.rs  singlethreaded.rs  tile.rs  utils.rs
rust/brownbag/src/aigenerated/: created_by_ai_assistant_mpsc.rs  created_by_ai_assistant_threads.rs  created_by_ai_assistant_threads_work_stealing.rs  created_by_ai_assistant_threads_work_stealing_rayon.rs
rust/common/: Cargo.toml
rust/common/examples/: extract_rgb.rs
rust/common/src/: color.rs  complex.rs  fractal.rs  fractal_calculation.rs  fractal_calculation_crossbeam.rs  fractal_calculation_multi.rs  fractal_calculation_rayon.rs  fractal_calculation_single.rs  fractal_templates.rs  image_tile.rs  lib.rs  models.rs  palette.rs  rayon_image.rs  utils.rs
rust/common/src/imageserver/: models.rs
rust/common/src/rational/: complex_rational_numbers.rs  mod.rs  rational_fractal_calculation.rs  rational_numbers.rs  request.rs
rust/frontend/: Cargo.toml  index.html
rust/frontend/src/: main.rs
rust/image_server/: Cargo.toml
rust/image_server/src/: main.rs  server.rs  utils.rs
rust/image_server_frontend/: Cargo.toml  index.html
rust/image_server_frontend/src/: main.rs
