[package]
name = "fractal-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
pretty_env_logger = "0.5.0"
log = "0.4.18"
tokio = { version = "1.28.2", features = ["fs", "sync", "time"] }
lazy_static = "1.4.0"
futures = { version = "0.3.28" }
futures-util = { version = "0.3.28" }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_derive = "1.0.163"
image = "0.24.6"
num_cpus = "1.15.0"
rayon = "1.7.0"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.28", default-features = true }

