[package]
name = "fractal-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
pretty_env_logger = "0.5.0"
log = "0.4.20"
tokio = { version = "1.34.0", features = ["fs", "sync", "time"] }
lazy_static = "1.4.0"
futures = { version = "0.3.29" }
futures-util = { version = "0.3.29" }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_derive = "1.0.193"
image = "0.24.7"
num_cpus = "1.16.0"
rayon = "1.8.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
common = { path = "../common" }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.29", default-features = true }

