[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_derive = "1.0.193"
log = "0.4.20"
pretty_env_logger = "0.5.0"
image = "0.24.7"
chrono = "0.4.31"
num_cpus = "1.16.0"
rayon = "1.8.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
